fix: make logo clickable on mobiles

--- a/wordpress/wp-content/themes/les-verts/styleguide/src/components/molecules/m-menu/m-menu.scss
+++ b/wordpress/wp-content/themes/les-verts/styleguide/src/components/molecules/m-menu/m-menu.scss
@@ -14,6 +14,8 @@
 		@include clean-link;
 		@include fluid-props(width, $size-medium, $grid-max-width-max, 100px, 116px);
 		margin-left: 30px;
+		position: relative;
+		z-index: 5;
 
 		@include media($_DESKTOP) {
 			@include fluid-props(margin-left, $size-medium, $grid-max-width-max, 16px, 33px);
